--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,11 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{soni2023efficient,
+  title={Efficient Pipeline Inspection via a Biometric Robot: A study incorporating snake locomotion patterns and linear actuator functionality for enhanced performance.},
+  author={Soni, Riddhish and Swaminathan, Karthik and Tupe, Mahesh and Mundane, Chinmay and Gupta, Vaidic and Kazi, Faruk and Chhaparia, Aman and Soni, Divyang and Chittora, Nirmal and Wasnik, Anurag},
+  journal={Everything about Water},
+  pages={50--53},
+  year={2023}
 }
-
 
